src-tauri/check_output.txt
cargo :    Compiling t2-tarkov-toolbox v0.1.0 (D:\tool\projects\T2-Tarkov-Toolbox\src-tauri)
所在位置 行:1 字符: 1
+ cargo check 2>&1 | Out-File -Encoding utf8 check_output.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling t2...lbox\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused imports: `MonitorInfo`, `enumerate_monitors`, and `get_monitor_device_name`
  --> src\filter\mod.rs:10:19
   |
10 | pub use monitor::{MonitorInfo, enumerate_monitors, get_monitor_device_name};
   |                   ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `PWSTR: IntoParam<PCWSTR, CopyType>` is not satisfied
   --> src\filter\monitor.rs:28:17
    |
 27 |             EnumDisplayDevicesW(
    |             ------------------- required by a bound introduced by this call
 28 |                 PWSTR::null(),
    |                 ^^^^^^^^^^^^^ the trait `CanInto<PCWSTR>` is not implemented for `PWSTR`
    |
note: there are multiple different versions of crate `windows_core` in the dependency graph
   --> C:\Users\T2PC.DESKTOP-3IMKTVU\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.52.0\src\param.rs:70:1
    |
 70 | pub trait CanInto<T>: Sized
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is the required trait
    |
   ::: src\filter\gamma_ramp.rs:4:5
    |
  4 | use windows::Win32::{
    |     ------- one version of crate `windows_core` used here, as a dependency of crate `windows`
    |
   ::: src\main.rs:5:5
    |
  5 | use tauri::Manager;
    |     ----- one version of crate `windows_core` used here, as a dependency of crate `windows`
    |
   ::: C:\Users\T2PC.DESKTOP-3IMKTVU\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.52.0\src\strings\pwstr.rs:6:1
    |
  6 | pub struct PWSTR(pub *mut u16);
    | ---------------- this type doesn't implement the required trait
    |
   ::: C:\Users\T2PC.DESKTOP-3IMKTVU\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.61.2\src\handles.rs:5:1
    |
  5 | pub trait Free {
    | -------------- this is the found trait
    = help: you can use `cargo tree` to explore your dependency tree
    = note: required for `PWSTR` to implement `IntoParam<PCWSTR, CopyType>`
note: required by a bound in `EnumDisplayDevicesW`
   --> C:\Users\T2PC.DESKTOP-3IMKTVU\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.52.0\src\Windows\Win32\Graphics\Gdi\m
od.rs:834:9
    |
832 | pub unsafe fn EnumDisplayDevicesW<P0>(lpdevice: P0, idevnum: u32, lpdisplaydevice: *mut DISPLAY_DEVICEW, dwflags: u32) -> super::su
per::F...
    |               ------------------- required by a bound in this function
833 | where
834 |     P0: ::windows_core::IntoParam<::windows_core::PCWSTR>,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EnumDisplayDevicesW`

error[E0610]: `u32` is a primitive type and therefore doesn't have fields
  --> src\filter\monitor.rs:40:62
   |
40 |         if display_device.StateFlags & DISPLAY_DEVICE_ACTIVE.0 != 0 {
   |                                                              ^

error[E0610]: `u32` is a primitive type and therefore doesn't have fields
  --> src\filter\monitor.rs:55:88
   |
55 |             let is_primary = display_device.StateFlags & DISPLAY_DEVICE_PRIMARY_DEVICE.0 != 0;
   |                                                                                        ^

error[E0277]: the trait bound `PWSTR: IntoParam<PCWSTR, CopyType>` is not satisfied
   --> src\filter\monitor.rs:120:17
    |
119 |             EnumDisplayDevicesW(
    |             ------------------- required by a bound introduced by this call
120 |                 PWSTR::null(),
    |                 ^^^^^^^^^^^^^ the trait `CanInto<PCWSTR>` is not implemented for `PWSTR`
    |
note: there are multiple different versions of crate `windows_core` in the dependency graph
   --> C:\Users\T2PC.DESKTOP-3IMKTVU\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.52.0\src\param.rs:70:1
    |
 70 | pub trait CanInto<T>: Sized
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is the required trait
    |
   ::: src\filter\gamma_ramp.rs:4:5
    |
  4 | use windows::Win32::{
    |     ------- one version of crate `windows_core` used here, as a dependency of crate `windows`
    |
   ::: src\main.rs:5:5
    |
  5 | use tauri::Manager;
    |     ----- one version of crate `windows_core` used here, as a dependency of crate `windows`
    |
   ::: C:\Users\T2PC.DESKTOP-3IMKTVU\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.52.0\src\strings\pwstr.rs:6:1
    |
  6 | pub struct PWSTR(pub *mut u16);
    | ---------------- this type doesn't implement the required trait
    |
   ::: C:\Users\T2PC.DESKTOP-3IMKTVU\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-core-0.61.2\src\handles.rs:5:1
    |
  5 | pub trait Free {
    | -------------- this is the found trait
    = help: you can use `cargo tree` to explore your dependency tree
    = note: required for `PWSTR` to implement `IntoParam<PCWSTR, CopyType>`
note: required by a bound in `EnumDisplayDevicesW`
   --> C:\Users\T2PC.DESKTOP-3IMKTVU\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.52.0\src\Windows\Win32\Graphics\Gdi\m
od.rs:834:9
    |
832 | pub unsafe fn EnumDisplayDevicesW<P0>(lpdevice: P0, idevnum: u32, lpdisplaydevice: *mut DISPLAY_DEVICEW, dwflags: u32) -> super::su
per::F...
    |               ------------------- required by a bound in this function
833 | where
834 |     P0: ::windows_core::IntoParam<::windows_core::PCWSTR>,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EnumDisplayDevicesW`

error[E0610]: `u32` is a primitive type and therefore doesn't have fields
   --> src\filter\monitor.rs:132:62
    |
132 |         if display_device.StateFlags & DISPLAY_DEVICE_ACTIVE.0 != 0 {
    |                                                              ^

Some errors have detailed explanations: E0277, E0610.
For more information about an error, try `rustc --explain E0277`.
warning: `t2-tarkov-toolbox` (bin "t2-tarkov-toolbox") generated 1 warning
error: could not compile `t2-tarkov-toolbox` (bin "t2-tarkov-toolbox") due to 5 previous errors; 1 warning emitted
